--- a/.github/workflows/snapshot-ruby_3_1.yml
+++ b/.github/workflows/snapshot-ruby_3_1.yml
@@ -157,12 +157,15 @@ jobs:
       - name: Set ENV
         run: |
           echo "JOBS=-j$((1 + $(nproc --all)))" >> $GITHUB_ENV
+          env | sort
       - name: configure
         run: cd snapshot-*/ && ./configure
       - name: make
         run: cd snapshot-*/ && make $JOBS
       - name: Tests
-        run: cd snapshot-*/ && make $JOBS -s ${{ matrix.test_task }}
+        run: |
+          env | sort
+          cd snapshot-*/ && make $JOBS -s ${{ matrix.test_task }}
         env:
           RUBY_TESTOPTS: "-q --tty=no"
       # leaked-globals since 2.7
